--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
     "DESCRIPTION": "Hi, I am a frontend developer based in Taunusstein, Germany, with a passion for creating intuitive and responsive web applications.",
     "INFO": "My journey into frontend development began out of a fascination with how websites work behind the scenes. I quickly fell in love with the blend of creativity and logic involved in building user interfaces. Every project is an opportunity for me to push my skills further and create seamless, engaging experiences for users. I love staying on the cutting edge of frontend technologies to bring fresh ideas to my work. I have a flexible mindset and am always eager to tackle new challenges that help me grow my skills and deepen my understanding.",
     "SPECIALIZATION": "I specialize in different frontend technologies and I love bringing designs to life with clean, efficient code. I enjoy solving complex problems and constantly learning new technologies to improve user experiences.",
+    "HEADLINE": "Skills",
     "SKILLS": "I have gained valuable experience in building projects using various front-end technologies and concepts. From crafting responsive user interfaces to optimizing performance, I am constantly improving my abilities to stay at the forefront of the industry. My journey does not stop there — I am always looking for new ways to expand my knowledge and take on new challenges. Recently, I have started exploring ethical hacking to better understand web security and to enhance the robustness of the applications I build. Continuous learning is key to my approach, and I am excited about where it will take me next.",
     "CONTACT_MESSAGE": "Please feel free to contact me. I am always eager to continue expanding my knowledge and am passionate about learning new technologies and concepts."
   },
@@ -33,13 +34,24 @@
     "EMAIL_PLACEHOLDER": "Your email",
     "MESSAGE_PLACEHOLDER": "Your message",
     "SUBMIT": "Submit message",
-    "PRIVACY_POLICY": "I have read the <a style=\"color: #9747ff; text-decoration: none;\" href=\"privacy-policy\" onmouseover=\"this.style.textDecoration='underline';\" onmouseout=\"this.style.textDecoration='none';\">Privacy Policy</a> and agree to it."
+    "PRIVACY_POLICY": "I have read the <a style=\"color: #9747ff; text-decoration: none; cursor: pointer\" onmouseover=\"this.style.textDecoration='underline';\" onmouseout=\"this.style.textDecoration='none';\">Privacy Policy</a> and agree to it."
   },
   "PORTFOLIO": {
     "HEADER": "Explore a selection of my work here – interact with projects to see my skills in action.",
     "JOIN": "Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.",
     "POLLO": "A Jump ’n’ Run game based on an object-oriented approach. Help Pepe to find coins and salsa bottles to fight against the chickens.",
-     "CRM": "A very simple Customer Relationship Management system working with CRUD functionality.",
+    "CRM": "A very simple Customer Relationship Management system working with CRUD functionality.",
     "POKEMON": "Based on the PokéAPI, a simple library that provides and catalogues Pokémon information."
+  },
+  "LEGAL_NOTICE": {
+    "TITLE": "Legal Notice",
+    "NAME": "Miriam Fuchs",
+    "ADDRESS_LINE1": "Beethovenstraße 47",
+    "ADDRESS_LINE2": "65232 Taunusstein",
+    "CONTACT_TITLE": "Contact",
+    "PHONE": "Phone: +49 (0) 16095801131",
+    "EMAIL": "Email: info@miriam-fuchs.net",
+    "SOURCE": "Source",
+    "SOURCE_LINK": "https://www.e-recht24.de/impressum-generator.html"
   }
 }
