--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,10 +43,12 @@
     "HEADER": "Explore a selection of my work here – interact with projects to see my skills in action.",
     "JOIN": "Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.",
     "POLLO": "A Jump ’n’ Run game based on an object-oriented approach. Help Pepe to find coins and salsa bottles to fight against the chickens.",
-    "CRM": "A very simple Customer Relationship Management system working with CRUD functionality.",
     "POKEMON": "Based on the PokéAPI, a simple library that provides and catalogues Pokémon information.",
+    "CRM": "Work in progress: A very simple Customer Relationship Management system working with CRUD functionality.",
     "TYPO3-TITLE": "Website",
-    "TYPO3": "A website built and maintained using TYPO3."
+    "TYPO3": "A website built and maintained using TYPO3.",
+    "VOCABULARY-TITLE": "Vocabulary trainer",
+    "VOCABULARY": "A vocabulary trainer developed in C++. Users can add new words and test their knowledge through a vocabulary quiz."
   },
   "LEGAL_NOTICE": {
     "TITLE": "Legal Notice",
