--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -44,7 +44,7 @@
     "JOIN": "Task-Manager inspiriert vom Kanban-System. Erstellen und organisieren Sie Aufgaben mit Drag-and-Drop-Funktionen, weisen Sie Benutzer und Kategorien zu.",
     "POLLO": "Ein Jump ’n’ Run-Spiel basierend auf einem objektorientierten Ansatz. Helfen Sie Pepe, Münzen und Salsa-Flaschen zu finden, um gegen die Hühner zu kämpfen.",
     "POKEMON": "Basierend auf der PokéAPI, eine einfache Bibliothek, die Pokémon-Informationen bereitstellt und auflistet.",
-    "CRM": "In der Entwicklung: Ein sehr simples Customer-Relationship-Management-System mit CRUD-Funktionalität.",
+    "CRM": "IN DER ENTWICKLUNG: Ein sehr simples Customer-Relationship-Management-System mit CRUD-Funktionalität.",
     "TYPO3-TITLE": "Webseite",
     "TYPO3": "Eine Webseite, die mit TYPO3 erstellt und verwaltet wird.",
     "VOCABULARY-TITLE": "Vokabeltrainer",
